--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,51 @@
 {% extends "base.html" %}
-
 {% block content %}
-<h1 class="title">
-  Index pagefuidjoskiufsdjkl
-</h1>
-<h2 class="subtitle">
-    Subtitle textdfcjhbjhd vcjhn v
-</h2>
+<div class="container">
+  <div class="d-flex justify-content-between p-2">
+      <h1>{{header}} файлы</h1>
+      <div class="d-flex">
+          <input type="file" id="upload" hidden/>
+          <label id="upload-lbl" for="upload" class="d-flex align-items-center p-1">Загрузить<svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg"  viewBox="-0.5 -0.5 16 16" width="32px" height="32px"><path d="M 7.5 1 C 3.917969 1 1 3.917969 1 7.5 C 1 11.082031 3.917969 14 7.5 14 C 11.082031 14 14 11.082031 14 7.5 C 14 3.917969 11.082031 1 7.5 1 Z M 7.5 2 C 10.542969 2 13 4.457031 13 7.5 C 13 10.542969 10.542969 13 7.5 13 C 4.457031 13 2 10.542969 2 7.5 C 2 4.457031 4.457031 2 7.5 2 Z M 7 4 L 7 7 L 4 7 L 4 8 L 7 8 L 7 11 L 8 11 L 8 8 L 11 8 L 11 7 L 8 7 L 8 4 Z"/></svg></label>
+      </div>
+  </div>
+
+<div class="row row-cols-1 row-cols-md-3 mt-50">
+  {% if files %}
+  {% for file in files %}
+  <div class="col mb-4">
+  <div class="card" style="min-height: 90px;">
+    <div class="card-body ">
+      <div class="d-flex justify-content-between align-items-center ">
+        <div class="filename">
+          <p class="card-text d-flex align-middle">{{file.fileName}}</p>
+        </div>
+      
+      <div class="btn-groups d-flex align-middle ml-2">
+        <div class="btn-grp align-middle d-flex align-items-center"><a href="/download/{{file.id}}" class="btn btn-success"><img src="../static/download.png" width="16px" height="16px"></a></div>
+        <div class="btn-grp ml-2 d-flex align-items-center"><a href="/delete/{{file.id}}" class="btn btn-danger"><img src="../static/delete.png" width="16px" height="16px"></a></div> 
+    </div>
+    </div>
+    </div>
+  </div>
+</div>
+  {% endfor %}
+  {% else %}
+  <h5 class="mt-5">Скорее загрузите свой первый файл!</h5>
+  {% endif %}
+</div >
+  </div>
+
+
+<script src="{{url_for('static', filename='/js/upload.js')}}"></script>
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
