--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-  Index pagefuidjoskiufsdjkl
-</h1>
-<h2 class="subtitle">
-    Subtitle textdfcjhbjhd vcjhn v
-</h2>
+{% for product in products %}
+<div class="card mb-3 d-flex">
+  
+  <div class="card-body d-flex">
+    <img class="m-3" src="https://ichef.bbci.co.uk/news/640/cpsprodpb/14236/production/_104368428_gettyimages-543560762.jpg" height="200px" width="200px" alt="Card image cap">
+    <div>
+    <a class="text-decoration-none" href="/view/{{product.id}}"><h5 class="card-title">{{product.header}}</h5></a>
+    <p class="card-text">{{product.description}}</p>
+    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+  </div>
+  </div>
+  
+</div>
+{% endfor %}
 {% endblock %}
