--- a/app/templates/new_one.html
+++ b/app/templates/new_one.html
@@ -4,35 +4,35 @@
     <h1 style = "font-family:'Abril Fatface', cursive; margin-top: 5%; margin-left: 10%; padding: 20px">New card</h1>
     <a href="/mycards"><button type="button" class="btn btn-primary">Back</button></a>    
 </div>
-<body style= "background-color: #BFAFF7;"></body>
+<body style= "background-color: #F5DEB3;"></body>
 <form class="w-50 m-auto" method="POST" action="addcard" enctype="multipart/form-data">
     <div class="form-group">
-      <label for="exampleInputEmail1">First Name</label>
-      <input type="text" class="form-control" maxlength="40" name="firstName">
+      <label for="exampleInputEmail1">Name</label>
+      <input type="text" class="form-control" maxlength="40" name="name">
     </div>
     <div class="form-group">
-        <label for="exampleInputEmail1">Middle Name</label>
-        <input type="text" class="form-control" maxlength="40" name="middleName">
+        <label for="exampleInputEmail1">Second name</label>
+        <input type="text" class="form-control" maxlength="40" name="sec_name">
       </div>
       <div class="form-group">
-        <label for="exampleInputEmail1">Last Name</label>
-        <input type="text" class="form-control" maxlength="40" name="lastName">
+        <label for="exampleInputEmail1">Contact number</label>
+        <input type="text" class="form-control" maxlength="40" name="contact_number">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">E-mail</label>
+        <input type="text" class="form-control" maxlength="40" name="mail">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Social media</label>
+        <input type="text" class="form-control" maxlength="40"  name="social_media">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Adress</label>
+        <input type="text" class="form-control" maxlength="40" name="adress">
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Date of Birth</label>
         <input type="date" class="form-control" maxlength="40" name="birthDate">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Favourite Color</label>
-        <input type="text" class="form-control" maxlength="40" name="favColor">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Favourite Food</label>
-        <input type="text" class="form-control" maxlength="40"  name="favFood">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Personality Type</label>
-        <input type="text" class="form-control" maxlength="40" name="personalityType">
       </div>
       <div class="input-group mb-3">
         <div class="input-group-prepend">
