--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,9 @@
                             <a class="nav-link" href="{{url_for('main.newproduct')}}">New Product</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('main.myproducts')}}">My Products</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link"  href="{{url_for('auth.logout')}}">Log Out</a>
                         </li>
                         {% endif %}
