--- a/app/templates/myproducts.html
+++ b/app/templates/myproducts.html
@@ -11,8 +11,11 @@
     <p class="card-text">{{product.description}}</p>
     <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
   </div>
-  </div>
   
+  </div>
+  <div class="d-flex justify-content-end">
+    <a href="/delete/{{product.id}}" class="btn btn-danger">Delete</a>
+</div>
 </div>
 {% endfor %}
 {% endblock %}
